--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -264,219 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['The Attachment Diaries',\n",
-       " 'What’s Love Got to Do With It?’ Probably a Lo',\n",
-       " 'You Can Live Forever',\n",
-       " 'A Tourist’s Guide to Love',\n",
-       " 'Other People’s Children',\n",
-       " 'One True Loves',\n",
-       " 'The Lost Weekend: A Love Story',\n",
-       " 'A Thousand and One',\n",
-       " 'Your Place or Mine',\n",
-       " 'Love in the Time of Fentanyl',\n",
-       " 'Pamela, a Love Story',\n",
-       " 'In From the Side',\n",
-       " 'After Love',\n",
-       " 'Alcarràs',\n",
-       " 'Nelly & Nadine',\n",
-       " 'Lady Chatterley’s Lover',\n",
-       " 'The Sound of Christmas',\n",
-       " 'The Inspection',\n",
-       " 'Bones and All',\n",
-       " 'My Policeman',\n",
-       " 'About Fate',\n",
-       " 'Waiting for Bojangles',\n",
-       " 'I Love My Dad',\n",
-       " 'A Love Song',\n",
-       " 'Alone Together',\n",
-       " 'Art of Love',\n",
-       " 'The Wheel',\n",
-       " 'Thor: Love and Thunder',\n",
-       " 'Both Sides of the Blade',\n",
-       " 'Fire of Love',\n",
-       " 'Love & Gelato',\n",
-       " 'Stay Prayed Up',\n",
-       " 'Benediction',\n",
-       " 'Dinner in America',\n",
-       " 'In a New York Minute',\n",
-       " 'Anaïs in Love',\n",
-       " 'I Love America',\n",
-       " 'See You Then',\n",
-       " 'La Mami',\n",
-       " 'Love After Love',\n",
-       " 'Deep Water',\n",
-       " 'Lucy and Desi',\n",
-       " 'Cyrano',\n",
-       " 'The In Between',\n",
-       " 'Book of Love',\n",
-       " 'Lingui, the Sacred Bonds',\n",
-       " 'The Pink Cloud',\n",
-       " 'A Journal for Jordan',\n",
-       " 'West Side Story',\n",
-       " 'Aulcie',\n",
-       " 'Love Is Love Is Love',\n",
-       " 'Love Hard',\n",
-       " 'Bergman Island',\n",
-       " 'Hard Luck Love Song',\n",
-       " 'South of Heaven',\n",
-       " 'Wife of a Spy',\n",
-       " 'Happier Than Ever',\n",
-       " 'Together',\n",
-       " 'Annette',\n",
-       " 'Resort to Love',\n",
-       " 'Woodstock 99: Peace, Love and Rage',\n",
-       " 'Casanova, Last Love',\n",
-       " 'Running Against the Wind',\n",
-       " 'Asia',\n",
-       " 'Undine',\n",
-       " 'This Town',\n",
-       " 'Tu Me Manques',\n",
-       " 'Monday',\n",
-       " 'Ride or Die',\n",
-       " 'Future People',\n",
-       " 'Luz',\n",
-       " 'Happily',\n",
-       " 'This Is the Life',\n",
-       " 'To All the Boys: Always and Forever',\n",
-       " 'Young Hearts',\n",
-       " 'Little Fish',\n",
-       " 'Two of Us',\n",
-       " 'Atlantis',\n",
-       " 'Preparations to Be Together',\n",
-       " 'Your Name Engraved Herein',\n",
-       " 'Sylvie’s Love',\n",
-       " 'Ariana Grande: Excuse Me, I Love You',\n",
-       " 'Museum Town',\n",
-       " 'Wild Mountain Thyme',\n",
-       " 'My Psychedelic Love Story',\n",
-       " '69: The Saga of Danny Hernandez',\n",
-       " 'Ammonite',\n",
-       " 'Love and Monsters',\n",
-       " 'Dick Johnson Is Dead',\n",
-       " 'Love, Guaranteed',\n",
-       " 'Feel the Beat',\n",
-       " 'Babyteeth',\n",
-       " 'Spelling the Dream',\n",
-       " 'A Secret Love',\n",
-       " 'Love Wedding Repeat',\n",
-       " 'Almost Love',\n",
-       " 'Hope Gap',\n",
-       " 'All the Bright Places',\n",
-       " 'The Photograph',\n",
-       " 'You Go to My Head',\n",
-       " 'Ordinary Love',\n",
-       " 'To All the Boys: P.S. I Still Love You',\n",
-       " 'The Woman Who Loves Giraffes',\n",
-       " 'Queen & Slim',\n",
-       " 'Marriage Story',\n",
-       " 'Cyrano, My Love',\n",
-       " 'Pretenders',\n",
-       " 'First Love',\n",
-       " 'Loro',\n",
-       " 'Falling Inn Love',\n",
-       " 'Hot Air',\n",
-       " 'Love, Antosha',\n",
-       " 'Leto',\n",
-       " 'The Tomorrow Man',\n",
-       " 'Asako I & II',\n",
-       " 'The Sun Is Also a Star',\n",
-       " 'Shéhérazade',\n",
-       " 'Long Shot',\n",
-       " 'Clara',\n",
-       " 'Kalank',\n",
-       " 'Rafiki',\n",
-       " 'Diane',\n",
-       " 'Five Feet Apart',\n",
-       " 'Ash Is Purest White',\n",
-       " 'Gloria Bell',\n",
-       " 'Black Mother',\n",
-       " 'The Hole in the Ground',\n",
-       " 'How to Train Your Dragon: The Hidden World',\n",
-       " 'A Tuba to Cuba',\n",
-       " 'Fighting With My Family',\n",
-       " 'Sorry Angel',\n",
-       " 'Berlin, I Love You',\n",
-       " 'Untogether',\n",
-       " 'Cold War',\n",
-       " 'If Beale Street Could Talk',\n",
-       " 'Asher',\n",
-       " 'The Party’s Just Beginning',\n",
-       " 'The Great Pretender',\n",
-       " 'Sicilian Ghost Story',\n",
-       " 'The New Romantic',\n",
-       " 'Pimp',\n",
-       " 'In a Relationship',\n",
-       " 'They’ll Love Me When I’m Dead’ Documents Orson Welles’s Last Fil',\n",
-       " 'Burning,’ Love Ignites a Divided Worl',\n",
-       " 'After Everything,’ a Young Love Blooms in Crisi',\n",
-       " 'Quincy’ Captures a Lifelong Love Affair With Musi',\n",
-       " 'Love, Gilda,’ a Portrait of a Brief and Brilliant Caree',\n",
-       " 'Tea With the Dames,’ Four Legends Dish on Acting and Lov',\n",
-       " 'Bel Canto,’ Music Is the Food of Love and Rebellio',\n",
-       " 'The Citizen,’ an Immigrant Picks a Bad Time to Fall in Lov',\n",
-       " 'Love, Cecil,’ an Aesthete Ahead of His Tim',\n",
-       " 'How to Talk to Girls at Parties',\n",
-       " 'Rogers Park,’ Life and Love in a Chicago Neighborhoo',\n",
-       " 'Love & Bananas,’ Uncovering the Plight of the Asian Elephan',\n",
-       " 'Godard Mon Amour',\n",
-       " 'Submergence,’ a Love Story Sunk by Geopolitic',\n",
-       " 'Love After Love,’ an Unflinching Look at Extended Grie',\n",
-       " 'Outside In',\n",
-       " 'Love, Simon,’ a Glossy Teen Romance, the Hero Has a Secre',\n",
-       " 'Keep the Change,’ Two People With Autism Find Lov',\n",
-       " 'The Party',\n",
-       " 'The Housemaid,’ Twisted Love and Angry Ghosts in Vietna',\n",
-       " 'Forever My Girl,’ a Romance Resumes After a Long Brea',\n",
-       " 'Kangaroo: A Love-Hate Story’ Exposes a Wildlife Massacr',\n",
-       " 'Lover for a Day',\n",
-       " 'Youth,’ the People’s Dance Troupe, in Love and Wa',\n",
-       " 'Killing for Love’ Revisits a Virginia Murder Cas',\n",
-       " 'The Shape of Water’ Is Altogether Wonderfu',\n",
-       " 'Love Beats Rhymes,’ a Hip-Hop Artist Transformed by Poetr',\n",
-       " 'Cuba and the Cameraman’ Lavishes Love on a Country … and Castr',\n",
-       " 'On the Beach at Night Alone’ Zooms in on a Love Affai',\n",
-       " 'Thelma,’ a Woman in Love Can Burn Down the Worl',\n",
-       " 'Hello Again,’ a Movie Musical Ode to Love and Lust Over Decade',\n",
-       " 'It Happened in L.A.,’ All That Questing After Lov',\n",
-       " 'God’s Own Country',\n",
-       " 'The Mountain Between Us',\n",
-       " 'Dina,’ a Differently Abled Love Stor',\n",
-       " 'In Search of Fellini',\n",
-       " 'Woodpeckers,’ a Tale of Love and Agonizing Penal Confinemen',\n",
-       " 'I Do ... Until I Don’t,’ Love and Loathing in Florid',\n",
-       " 'Tales of an Immoral Couple’: Love Means Having to Grow U',\n",
-       " 'After Love’ and Regretting Every Momen',\n",
-       " 'The Last Face',\n",
-       " 'Women Who Kill,’ and May Be in Love With On',\n",
-       " 'False Confessions,’ the Play’s Not Quite the Thin',\n",
-       " 'Review: Those Movies, Himself — Bertrand Tavernier’s Tour of French Cinem',\n",
-       " 'The Big Sick,’ Comedy Is Hard, Love Harde',\n",
-       " 'Lost in Paris',\n",
-       " 'Vincent N Roxxy,’ Love Is in the Air, N So Is Fea',\n",
-       " 'Everything, Everything’ Pits Love Against Diseas',\n",
-       " 'Hounds of Love’ Is Tense and Deadly Down Unde',\n",
-       " 'Harold and Lillian’ Introduces a Hollywood Power Coupl',\n",
-       " 'The Happiest Day in the Life of Olli Maki,’ Love and Life on the Rope',\n",
-       " 'The Promise’ Finds a Love Triangle in Constantinopl',\n",
-       " 'Frantz,’ a Mysterious Frenchman and the Wounds of Wa',\n",
-       " 'The Other Half',\n",
-       " 'The Ottoman Lieutenant',\n",
-       " 'Love & Taxes',\n",
-       " 'Everybody Loves Somebody,’ a Rom-Com With Bit',\n",
-       " 'Kedi,’ Rekindling a ‘Love of Life']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'title'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Create a list from the \"title\" column using to_list()\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# These titles will be used in the query for The Movie Database\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m titles_list \u001b[38;5;241m=\u001b[39m \u001b[43mreviews_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtitle\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mto_list()\n\u001b[1;32m      4\u001b[0m titles_list\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:4090\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4088\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4089\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4090\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4091\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4092\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/range.py:417\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    415\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m    416\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Hashable):\n\u001b[0;32m--> 417\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n\u001b[1;32m    418\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n\u001b[1;32m    419\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'title'"
+     ]
     }
    ],
    "source": [
@@ -2290,9 +2094,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'merged_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Export data to CSV without the index\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmerged_df\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutput/nyt_movie_reviews.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'merged_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Export data to CSV without the index\n",
     "merged_df.to_csv(\"output/nyt_movie_reviews.csv\", index=False)\n",
